Mounify the Project
added togles
added health based glow
and more
baced on Austin72's work